--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-#language: c++
+language: c++
 matrix:
     fast_finish: true
 
@@ -8,10 +8,10 @@ matrix:
           osx_image: xcode8.3
           compiler: clang
           env:
-            # NAME has no actual use, just to make the travis jobs overview more clear
-            - NAME="clang Debug"
-            - PELOTON_BUILD_TYPE=Debug
-            - COVERALLS=Off
+              # NAME has no actual use, just to make the travis jobs overview more clear
+              - NAME="clang Debug"
+              - PELOTON_BUILD_TYPE=Debug
+              - COVERALLS=Off
 
         # Linux builds for gcc 4.8
         - os: linux
@@ -26,28 +26,28 @@ matrix:
                   packages:
                     - g++-4.8
           env:
-            # NAME has no actual use, just to make the travis jobs overview more clear
-            - NAME="gcc4.8 Debug+Tests+Coveralls"
-            - CXX=g++-4.8
-            - CC=gcc-4.8
-            - PELOTON_BUILD_TYPE=Debug
-            # COVERALLS: we run coveralls only for one compiler
-            - COVERALLS=On
+              # NAME has no actual use, just to make the travis jobs overview more clear
+              - NAME="gcc4.8 Debug+Tests+Coveralls"
+              - CXX=g++-4.8
+              - CC=gcc-4.8
+              - PELOTON_BUILD_TYPE=Debug
+              # COVERALLS: we run coveralls only for one compiler
+              - COVERALLS=On
           # only run tests if the build itself succeeded
           after_success:
-            # run tests
-            - if [[ $TRAVIS_OS_NAME != 'osx' ]]; then make check -j4; fi
-            - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then ASAN_OPTIONS=detect_container_overflow=0 make check -j4; fi
-            # build benchmarks
-            - make benchmark -j4
-            # install peloton
-            - make install
-            # run psql tests
-            - bash ../script/testing/psql/psql_test.sh
-            # run jdbc tests
-            - python ../script/validators/jdbc_validator.py
-            # upload coverage info
-            - make coveralls
+              # run tests
+              - if [[ $TRAVIS_OS_NAME != 'osx' ]]; then make check -j4; fi
+              - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then ASAN_OPTIONS=detect_container_overflow=0 make check -j4; fi
+              # build benchmarks
+              - make benchmark -j4
+              # install peloton
+              - make install
+              # run psql tests
+              - bash ../script/testing/psql/psql_test.sh
+              # run jdbc tests
+              - python ../script/validators/jdbc_validator.py
+              # upload coverage info
+              - make coveralls
 
         - os: linux
           sudo: required
@@ -61,103 +61,64 @@ matrix:
                   packages:
                     - g++-4.8
           env:
-            # NAME has no actual use, just to make the travis jobs overview more clear
-            - NAME="gcc4.8 Release+Tests"
-            - CXX=g++-4.8
-            - CC=gcc-4.8
-            - PELOTON_BUILD_TYPE=Release
-            - COVERALLS=Off
+              # NAME has no actual use, just to make the travis jobs overview more clear
+              - NAME="gcc4.8 Release+Tests"
+              - CXX=g++-4.8
+              - CC=gcc-4.8
+              - PELOTON_BUILD_TYPE=Release
+              - COVERALLS=Off
           # only run tests if the build itself succeeded
           after_success:
-            # run tests
-            - if [[ $TRAVIS_OS_NAME != 'osx' ]]; then make check -j4; fi
-            - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then ASAN_OPTIONS=detect_container_overflow=0 make check -j4; fi
-            # build benchmarks
-            - make benchmark -j4
-            # install peloton
-            - make install
-            # run psql tests
-            - bash ../script/testing/psql/psql_test.sh
-            # run jdbc tests
-            - python ../script/validators/jdbc_validator.py
+              # run tests
+              - if [[ $TRAVIS_OS_NAME != 'osx' ]]; then make check -j4; fi
+              - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then ASAN_OPTIONS=detect_container_overflow=0 make check -j4; fi
+              # build benchmarks
+              - make benchmark -j4
+              # install peloton
+              - make install
+              # run psql tests
+              - bash ../script/testing/psql/psql_test.sh
+              # run jdbc tests
+              - python ../script/validators/jdbc_validator.py
 
         # Linux builds for gcc 5
-                - os: linux
-                  sudo: required
-                  dist: trusty
-                  compiler: gcc
-                  addons:
-                      apt:
-                          sources:
-                              - llvm-toolchain-precise-3.7
-                              - ubuntu-toolchain-r-test
-                          packages:
-                            - g++-5
-                  env:
-                    # NAME has no actual use, just to make the travis jobs overview more clear
-                    - NAME="gcc5 Debug"
-                    - CXX=g++-5
-                    - CC=gcc-5
-                    - PELOTON_BUILD_TYPE=Debug
-                    - COVERALLS=Off
-
-                - os: linux
-                  sudo: required
-                  dist: trusty
-                  compiler: gcc
-                  addons:
-                      apt:
-                          sources:
-                              - llvm-toolchain-precise-3.7
-                              - ubuntu-toolchain-r-test
-                          packages:
-                            - g++-5
-                  env:
-                    # NAME has no actual use, just to make the travis jobs overview more clear
-                    - NAME="gcc5 Release"
-                    - CXX=g++-5
-                    - CC=gcc-5
-                    - PELOTON_BUILD_TYPE=Release
-                    - COVERALLS=Off
-
-        # Linux builds for clang 3.7
         - os: linux
           sudo: required
           dist: trusty
-          compiler: clang
+          compiler: gcc
           addons:
               apt:
                   sources:
                       - llvm-toolchain-precise-3.7
                       - ubuntu-toolchain-r-test
                   packages:
-                    - clang-3.7
+                    - g++-5
           env:
-            # NAME has no actual use, just to make the travis jobs overview more clear
-            - NAME="clang3.7 Debug"
-            - CXX=clang-3.7
-            - CC=clang-3.7
-            - PELOTON_BUILD_TYPE=Debug
-            - COVERALLS=Off
+              # NAME has no actual use, just to make the travis jobs overview more clear
+              - NAME="gcc5 Debug"
+              - CXX=g++-5
+              - CC=gcc-5
+              - PELOTON_BUILD_TYPE=Debug
+              - COVERALLS=Off
 
         - os: linux
           sudo: required
           dist: trusty
-          compiler: clang
+          compiler: gcc
           addons:
               apt:
                   sources:
                       - llvm-toolchain-precise-3.7
                       - ubuntu-toolchain-r-test
                   packages:
-                    - clang-3.7
+                    - g++-5
           env:
-            # NAME has no actual use, just to make the travis jobs overview more clear
-            - NAME="clang3.7 Release"
-            - CXX=clang-3.7
-            - CC=clang-3.7
-            - PELOTON_BUILD_TYPE=Release
-            - COVERALLS=Off
+              # NAME has no actual use, just to make the travis jobs overview more clear
+              - NAME="gcc5 Release"
+              - CXX=g++-5
+              - CC=gcc-5
+              - PELOTON_BUILD_TYPE=Release
+              - COVERALLS=Off
 
 install:
     # setup environment
